# octra-wallet-app

./: Cargo.toml  LICENSE  README.md  settings.json
src/: main.rs
